# forNastya

./: pyproject.toml
course_work_meeting/: basic_word.py  main.py  player.py  settings.py  utils.py
